@@ -71,10 +71,6 @@ public <xsl:if test="not(/iwrp:interface/iwrp:ihandler) and not(@extends)">abstr
     </xsl:choose>
     }
     
-    <xsl:call-template name="generatetostring">
-      <xsl:with-param name="classname" select="$classname"/> 
-    </xsl:call-template>
-    
     @Override
     protected synchronized void registerParams() {
         super.registerParams();
@@ -331,49 +327,5 @@ public <xsl:if test="not(/iwrp:interface/iwrp:ihandler) and not(@extends)">abstr
       <xsl:with-param name="node" select="$node"/>
     </xsl:call-template>
   </xsl:template>
-
-
-  <xsl:template name="generatetostring">
-    <xsl:param name="classname"/>
-    @Override
-    public String toString() {
-        StringBuffer sb = new StringBuffer(255);
-        sb.append("*** All wrapper-data for <xsl:value-of select="$classname"/> {\n");
-        <xsl:if test="/iwrp:interface/@extends">
-          sb.append(super.toString());
-        </xsl:if>
-        <xsl:for-each select="/iwrp:interface/iwrp:param">
-          <xsl:variable name="freq">
-            <xsl:choose>
-              <xsl:when test="@frequency = 'multiple'">[]</xsl:when>
-              <xsl:otherwise></xsl:otherwise>
-            </xsl:choose>
-          </xsl:variable>
-          <xsl:variable name="pname" select="@name"/>
-          <xsl:variable name="ptype" select="@type"/>
-            
-           <xsl:choose>
-            <xsl:when test="@frequency = 'multiple'">
-              <xsl:variable name="arrayname"><xsl:value-of select="$pname"/>Arr</xsl:variable>
-              <xsl:value-of select="$ptype"/>[] <xsl:value-of select="$arrayname"/>= (<xsl:value-of select="$ptype"/>[])gimmeParamForKey("<xsl:value-of select="$pname"/>").getValueArr(); 
-        if (<xsl:value-of select="$arrayname"/> == null) {
-            sb.append("<xsl:value-of select="$pname"/>[] = NULL");
-        } else {
-            for (int i = 0; i &lt; <xsl:value-of select="$arrayname"/>.length; i++) {
-               sb.append("<xsl:value-of select="$pname"/>[" + i + "] = " + <xsl:value-of select="$arrayname"/>[i]).append("\n");
-            }
-        }
-             </xsl:when>
-             <xsl:otherwise>
-        sb.append("<xsl:value-of select="$pname"/> = " + gimmeParamForKey("<xsl:value-of select="$pname"/>").getValue()).append("\n");
-            </xsl:otherwise>
-           </xsl:choose> 
-        </xsl:for-each>
-        sb.append("}\n");
-        return sb.toString();
-    }
-  
-  </xsl:template>
-
 
 </xsl:stylesheet>
